<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pujolsluis.android.basketballcounter.MainActivity">

    <Button
        android:text="@string/teams_threePoint_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_teamA_threePoints"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/button_teamA_twoPoints"
        app:layout_constraintLeft_toLeftOf="@+id/button_teamA_twoPoints"
        app:layout_constraintRight_toRightOf="@+id/button_teamA_twoPoints"
        android:onClick="addThreePoint" />

    <Button
        android:text="@string/teams_onePoint_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_teamA_freePoint"
        app:layout_constraintBottom_toTopOf="@+id/button_teamA_twoPoints"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/button_teamA_twoPoints"
        app:layout_constraintRight_toRightOf="@+id/button_teamA_twoPoints"
        android:onClick="addOnePoint"/>

    <Button
        android:text="@string/teams_twoPoint_button"
        android:layout_height="wrap_content"
        android:id="@+id/button_teamA_twoPoints"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_width="140dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:onClick="addTwoPoint" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="193dp"
        app:layout_constraintGuide_percent="0.5026042" />

    <Button
        android:text="@string/teams_twoPoint_button"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_teamB_twoPoints"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:onClick="addTwoPoint" />

    <Button
        android:text="@string/teams_threePoint_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_teamB_threePoints"
        app:layout_constraintRight_toRightOf="@+id/button_teamB_twoPoints"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/button_teamB_twoPoints"
        app:layout_constraintLeft_toLeftOf="@+id/button_teamB_twoPoints"
        android:onClick="addThreePoint" />

    <Button
        android:text="@string/teams_onePoint_button"
        android:layout_height="wrap_content"
        android:id="@+id/button_teamB_freePoints"
        android:onClick="addOnePoint"
        app:layout_constraintBottom_toTopOf="@+id/button_teamB_twoPoints"
        android:layout_marginBottom="16dp"
        app:layout_constraintRight_toRightOf="@+id/button_teamB_twoPoints"
        app:layout_constraintLeft_toLeftOf="@+id/button_teamB_twoPoints"
        android:layout_width="0dp" />

    <TextView
        android:text="@string/team_AName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <TextView
        android:text="@string/team_BName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        android:layout_marginStart="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        app:srcCompat="@color/colorPrimary"
        android:id="@+id/imageView"
        app:layout_constraintRight_toLeftOf="@+id/button_teamB_twoPoints"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/button_teamA_twoPoints"
        android:layout_height="0dp"
        android:layout_marginBottom="74dp"
        android:layout_marginTop="32dp"
        android:layout_width="1dp" />

    <TextView
        android:text="@string/score_initial_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_score_teamA"
        app:layout_constraintBottom_toTopOf="@+id/button_teamA_freePoint"
        app:layout_constraintRight_toRightOf="@+id/textView"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="24sp" />

    <TextView
        android:text="@string/score_initial_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_score_teamB"
        app:layout_constraintRight_toRightOf="@+id/textView2"
        app:layout_constraintLeft_toLeftOf="@+id/textView2"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintBottom_toTopOf="@+id/button_teamB_freePoints"
        android:layout_marginBottom="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <Button
        android:text="Reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_gameReset"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:onClick="resetScore" />
</android.support.constraint.ConstraintLayout>
